# renquant-model-gbdt

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  renquant_repo.yml
.github/workflows/: ci.yml
docs/: source-map.md
src/renquant_model_gbdt/: __init__.py  ltr_model.py  pipelines.py  purged_cv.py  scorer.py  trainer.py
tests/: panel_fixtures.py  test_import_boundaries.py  test_ltr_model.py  test_no_silent_fallback.py  test_purged_cv.py  test_scorer.py  test_training_pipeline.py  test_training_pipeline_real_gbdt.py
